Fixed search bar height on mobile

--- a/resources/main.css
+++ b/resources/main.css
@@ -522,7 +522,7 @@ input {
   margin: 0 5% 20px 5%;
   border-radius: 5px;
   border: 1px solid #ccc;
-  padding: 17px 14px;
+  padding: 6px 14px;
   transition: 0.4s;
   box-sizing: border-box;
   outline: none;
